
*** HYBRID CHANGELOG
*** Newest entries at top


version hybrid-6-b68   8-May-1999
* more cleanup
* RedHat 6.0 / glibc fixes
* Y2K fixes.  All dates that were YYMMDD are now YYYYMMDD.  Affects
  SEPARATE_QUOTE_KLINES_BY_DATE and GLINE code.
* SEPARATE_QUOTE_KLINES_BY_DATE wouldn't compile
--Rodder

version hybrid-6-b67   9-May-1999
* fixed broken LIMIT_UH code
-Dianora
	
version hybrid-6-b66   8-May-1999
* Added TESTLINE looks for given user@host,ip returns info
  on any found I line or K line for that user.
* found and fixed major IP kline bug. 
* O lines can have an optional flags field, to set default oper flags	
-Dianora
	
version hybrid-6-b65   8-May-1999
* changed ANTI_DRONE_FLOOD and JUPE_CHANNEL to undeffed by default
* servers and opers can no longer trip the drone detection
--Rodder

version hybrid-6-b64   8-May-1999
* code clean-up...
--Rodder

version hybrid-6-b63   6-May-1999
* SPY_LEVEL notices for clients attempting to join juped channel
* sendto_realop notices when mode +/-j #channel is used
-Dianora
	
version hybrid-6-b62   4-May-1999
* Added ANTI_DRONE_FLOOD code	
* Added Channel jupe code, Q line of form Q:\#channel:reason
  jupes that channel locally only on this server.
* '|' character in kline reason stops everything afterwards from being seen
  by non opers.
-Dianora
	
version hybrid-6-b61   2-May-1999
* fixed major bug in mtrie code. I lines would be treated as K lines
  in some cases. 2-May-1999
-Dianora
	
version hybrid-6-b60   29-Apr-1999
* if server split time is 0, i.e. split code is disabled, dont'
  put the server into split mode, this can leave 0 member channels
  lying around after a split.
* recoded NO_JOIN_ON_SPLIT, all cleaned up.	 
-Dianora
	
version hybrid-6-b59   17-Apr-1999
* missing ac2ptr_is_NULL check in m_ltrace
-Rodder
* if client is being spoofed in I line, don't show real IP to non opers
  in trace or stats L
* consistently use 127.0.0.1 for spoofed/oper ip's	
-Dianora
	
version hybrid-6-b58   17-Apr-1999